--- a/jjm_cnmfe_caiman.ipynb
+++ b/jjm_cnmfe_caiman.ipynb
@@ -297,8 +297,9 @@
     }
    ],
    "source": [
-    "##this should work as a script to run on quest just need to pass tiff file or list of tiff files \n",
-    "#(will be converted to memory map?)\n",
+    "##script to run caiman cnmfe \n",
+    "#pass folder containing motion corrected mmpap file concactenated in C order as sys arg 1\n",
+    "#motion corrected mmpap file concactenated in C order as sys arg 2\n",
     "\n",
     "##!/Users/johnmarshall/miniconda3/envs/caiman/bin/python3\n",
     "try:\n",
@@ -325,6 +326,7 @@
     "from caiman.source_extraction.cnmf import params as params\n",
     "from caiman.utils.visualization import plot_contours, nb_view_patches, nb_plot_contour\n",
     "import cv2\n",
+    "import sys\n",
     "\n",
     "try:\n",
     "    cv2.setNumThreads(0)\n",
@@ -347,19 +349,11 @@
    "outputs": [],
    "source": [
     "## path to motion corrected tif tif file\n",
-    "path_to_file = ['/Users/johnmarshall/Documents/Analysis/MiniscopeMovies/test_files/motion_corrected.tif']\n",
-    "\n",
-    "## if no motion correction just memory map the file\n",
-    "fname_new = cm.save_memmap(path_to_file, base_name='memmap_', order='C', border_to_0=0, dview=dview)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "memory_map_file = '/Users/johnmarshall/Documents/Analysis/MiniscopeMovies/test_files/memmap__d1_480_d2_752_d3_1_order_C_frames_1000_.mmap'"
+    "#folder = '/Volumes/My_Passport/MiniscopeMovies/caiman_pipeline_test/'\n",
+    "#mc_file = 'memmap__d1_480_d2_752_d3_1_order_C_frames_202_.mmap'\n",
+    "folder = sys.arvg[1]\n",
+    "mc_file = sys.arvg[2]\n",
+    "memory_map_file = [sys.arvg[1]]"
    ]
   },
   {
@@ -1486,7 +1480,7 @@
     }
    ],
    "source": [
-    "inspect_correlation_pnr(cn_filter, pnr)"
+    "#inspect_correlation_pnr(cn_filter, pnr)"
    ]
   },
   {
@@ -1524,6 +1518,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print('running cnmfe')\n",
     "cnm.fit(images)"
    ]
   },
@@ -1532,12 +1527,53 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# get contours of found components\n",
+    "Cn = cm.local_correlations(images.transpose(1,2,0))\n",
+    "Cn[np.isnan(Cn)] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%% COMPONENT EVALUATION\n",
+    "# the components are evaluated in three ways:\n",
+    "#   a) the shape of each component must be correlated with the data\n",
+    "#   b) a minimum peak SNR is required over the length of a transient\n",
+    "#   c) each shape passes a CNN based classifier\n",
+    "\n",
+    "min_SNR = 3            # adaptive way to set threshold on the transient size\n",
+    "r_values_min = 0.85    # threshold on space consistency (if you lower more components\n",
+    "#                        will be accepted, potentially with worst quality)\n",
+    "cnm.params.set('quality', {'min_SNR': min_SNR,\n",
+    "                           'rval_thr': r_values_min,\n",
+    "                           'use_cnn': False})\n",
+    "cnm.estimates.evaluate_components(images, cnm.params, dview=dview)\n",
+    "\n",
+    "print(' ***** ')\n",
+    "print('Number of total components: ', len(cnm.estimates.C))\n",
+    "print('Number of accepted components: ', len(cnm.estimates.idx_components))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hf = h5py.File(folder + 'output_data.h5', 'w')\n",
+    "hf.create_dataset('A', data=cnm.estimates.A.toarray())\n",
+    "hf.create_dataset('C', data=cnm.estimates.C)\n",
+    "hf.close()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1551,7 +1587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
