--- a/mmap_to_h5py.ipynb
+++ b/mmap_to_h5py.ipynb
@@ -16,18 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload mmap_to_h5py_module"
@@ -74,6 +65,37 @@
     "def chunks(l, n):\n",
     "    for i in range(0, len(l), n):\n",
     "        yield(l[i:i+n])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunk_list = list(chunks(files, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Volumes/My_Passport/MiniscopeMovies/1_24_2019/GRIN_011_ACHf20/H10_M19_S59/mmap_C_order/memmap_0016_d1_480_d2_752_d3_1_order_C_frames_1000_.mmap',\n",
+       " '/Volumes/My_Passport/MiniscopeMovies/1_24_2019/GRIN_011_ACHf20/H10_M19_S59/mmap_C_order/memmap_0017_d1_480_d2_752_d3_1_order_C_frames_1000_.mmap',\n",
+       " '/Volumes/My_Passport/MiniscopeMovies/1_24_2019/GRIN_011_ACHf20/H10_M19_S59/mmap_C_order/memmap_0018_d1_480_d2_752_d3_1_order_C_frames_1000_.mmap']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chunk_list[3]"
    ]
   },
   {
