--- a/mmap_to_h5py.ipynb
+++ b/mmap_to_h5py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload mmap_to_h5py_module"
@@ -69,27 +78,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chunk_list = list(chunks(files, 5))"
+    "chunk_list = list(chunks(files, 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['/Volumes/My_Passport/MiniscopeMovies/1_24_2019/GRIN_011_ACHf20/H10_M19_S59/mmap_C_order/memmap_0016_d1_480_d2_752_d3_1_order_C_frames_1000_.mmap',\n",
-       " '/Volumes/My_Passport/MiniscopeMovies/1_24_2019/GRIN_011_ACHf20/H10_M19_S59/mmap_C_order/memmap_0017_d1_480_d2_752_d3_1_order_C_frames_1000_.mmap',\n",
-       " '/Volumes/My_Passport/MiniscopeMovies/1_24_2019/GRIN_011_ACHf20/H10_M19_S59/mmap_C_order/memmap_0018_d1_480_d2_752_d3_1_order_C_frames_1000_.mmap']"
+       "['/Volumes/My_Passport/MiniscopeMovies/1_24_2019/GRIN_011_ACHf20/H10_M19_S59/mmap_C_order/memmap_0003_d1_480_d2_752_d3_1_order_C_frames_1000_.mmap']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,6 +151,75 @@
    "outputs": [],
    "source": [
     "mmp_h5.concat_convert_from_mmap(files[0:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#convert single file\n",
+    "f_name = '/Volumes/My_Passport/miniscopemovies/3_8_2019/H16_M57_S23/TIFs/mmaps/memmap_0000_d1_480_d2_752_d3_1_order_C_frames_1000_.mmap'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "framea, dims, T = mmp.load_memmap(f_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "frames_array = np.array(framea)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:00<00:00, 27781.45it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "frames_array_resized = mmp_h5.caiman_mmap_to_hdf(frames_array, dims)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Volumes/My_Passport/miniscopemovies/3_8_2019/H16_M57_S23/TIFs/h5_files/memmap_0000_d1_480_d2_752_d3_1_order_C_frames_1000__resized.h5'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mmp_h5.save_to_hdf('/Volumes/My_Passport/miniscopemovies/3_8_2019/H16_M57_S23/TIFs/h5_files', \n",
+    "                   'memmap_0000_d1_480_d2_752_d3_1_order_C_frames_1000_.mmap',\n",
+    "                   frames_array_resized\n",
+    "                  )"
    ]
   },
   {
