--- a/convert_RGB_msCam_frames_to_greyscale-Copy2.ipynb
+++ b/convert_RGB_msCam_frames_to_greyscale-Copy2.ipynb
@@ -32,18 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "img_to_convert='/projects/b1118/miniscope/data/v4/JJM/RotaryWheel/DIO_r2_4/Day1/2021_11_17/13_03_47/My_V4_Miniscope/subset_tiff_test/My_V4_Miniscope_00_8bit.tif'"
+    "imgj_conversion ='/projects/b1118/miniscope/data/v4/JJM/RotaryWheel/DIO_r2_4/Day14/2021_12_02/20_08_41/My_V4_Miniscope/subset_conversion_test/8bit_imagej/subset_conversion_test_8bit_3.tif'\n",
+    "python_conversion='/projects/b1118/miniscope/data/v4/JJM/RotaryWheel/DIO_r2_4/Day14/2021_12_02/20_08_41/My_V4_Miniscope/subset_conversion_test/8bit_python/subset_conversion_test3.tif'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -54,14 +55,93 @@
        "(1000, 600, 600)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tiff_stack = imageio.mimread(img_to_convert, memtest=False)\n",
-    "np.shape(tiff_stack)"
+    "tiff_stack_imagej = imageio.mimread(imgj_conversion, memtest=False)\n",
+    "np.shape(tiff_stack_image_j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000, 600, 600)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tiff_stack_python = imageio.mimread(python_conversion, memtest=False)\n",
+    "np.shape(tiff_stack_python)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[33, 32, 34, ..., 35, 35, 36],\n",
+       "       [33, 34, 35, ..., 36, 35, 35],\n",
+       "       [32, 35, 32, ..., 36, 36, 36],\n",
+       "       ...,\n",
+       "       [46, 45, 41, ..., 35, 35, 31],\n",
+       "       [51, 45, 46, ..., 39, 35, 32],\n",
+       "       [44, 43, 48, ..., 37, 35, 33]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tiff_stack_image_j[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[33, 31, 34, ..., 35, 35, 36],\n",
+       "       [33, 34, 35, ..., 36, 35, 35],\n",
+       "       [31, 35, 31, ..., 36, 36, 36],\n",
+       "       ...,\n",
+       "       [46, 45, 41, ..., 35, 35, 31],\n",
+       "       [50, 45, 46, ..., 38, 35, 31],\n",
+       "       [43, 43, 48, ..., 37, 35, 33]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tiff_stack_python[1]"
    ]
   },
   {
